--- a/scripts-old/cluster-issuer.yml
+++ b/scripts-old/cluster-issuer.yml
@@ -1,7 +1,7 @@
 apiVersion: cert-manager.io/v1alpha2
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-application-gateway
+  name: letsencrypt
 spec:
   acme:
 
