--- a/scripts-old/ingress.yml
+++ b/scripts-old/ingress.yml
@@ -4,7 +4,7 @@ metadata:
   name: syntheticapi
   annotations:
     kubernetes.io/ingress.class: azure/application-gateway
-    cert-manager.io/cluster-issuer: letsencrypt-application-gateway
+    cert-manager.io/cluster-issuer: letsencrypt
     cert-manager.io/acme-challenge-type: http01
 spec:
   tls:
